# SimpleAIClient

./: .gitignore  CMakeLists.txt
src/: apiclient.cpp  apiclient.h  main.cpp  mainwindow.cpp  mainwindow.h
